--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,7 +11,7 @@
           <ion-label stacked>Senha</ion-label>
           <ion-input type="password"></ion-input>
         </ion-item>
-        <button ion-button block margin-top="10px">Entrar</button>
+        <button ion-button block margin-top="10px" (click)="login()">Entrar</button>
         <button ion-button block outline>Registrar</button>
   </form>
     
