--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,11 +5,11 @@
   <form>
       <ion-item>
         <ion-label stacked>E-mail</ion-label>
-        <ion-input type="email"></ion-input>
+        <ion-input [(ngModel)]="creds.email" name="email" type="email"></ion-input>
       </ion-item>
       <ion-item>
           <ion-label stacked>Senha</ion-label>
-          <ion-input type="password"></ion-input>
+          <ion-input [(ngModel)]="creds.senha" name="senha" type="password"></ion-input>
         </ion-item>
         <button ion-button block margin-top="10px" (click)="login()">Entrar</button>
         <button ion-button block outline>Registrar</button>
