--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,7 +12,7 @@
           <ion-input [(ngModel)]="creds.senha" name="senha" type="password"></ion-input>
         </ion-item>
         <button ion-button block margin-top="10px" (click)="login()">Entrar</button>
-        <button ion-button block outline>Registrar</button>
+        <button ion-button block outline (click)="signup()" >Registrar</button>
   </form>
     
 </ion-content>
