--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -6,11 +6,15 @@
     </button>
     <ion-title>Categorias</ion-title>
   </ion-navbar>
+  <ion-fab bottom right edge>
+      <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
+    </ion-fab>
 
 </ion-header>
 
 
 <ion-content padding>
+  
   <ion-list>
     <button ion-item *ngFor="let item of items" (click)=showProdutos(item.id)>
       <ion-thumbnail item-start>
