--- a/src/pages/produto-detail/produto-detail.html
+++ b/src/pages/produto-detail/produto-detail.html
@@ -5,10 +5,14 @@
     </button>
     <ion-title>ProdutoDetail</ion-title>
   </ion-navbar>
+  <ion-fab bottom right edge>
+      <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
+    </ion-fab>
 </ion-header>
 
 
 <ion-content padding>
+   
   <ion-card>
     <img [src]="item?.imageUrl || 'assets/imgs/prod.jpg'"/>
     <ion-card-content>
