--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -5,10 +5,14 @@
     </button>
     <ion-title>Produtos</ion-title>
   </ion-navbar>
+  <ion-fab bottom right edge>
+      <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
+    </ion-fab>
 </ion-header>
 
 
 <ion-content padding>
+    
   <ion-list>
     <button ion-item *ngFor="let item of items" (click)="showDetail(item.id)" >
       <ion-thumbnail item-start>
