Pagina de selecao de enderecos

--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Cart</ion-title>
+    <ion-title>Seu carrinho</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -30,4 +30,5 @@
     </ion-item>
   </ion-list>
   <button ion-button block (click)="goOn()">Continuar comprando</button>
+  <button ion-button color="secondary" block (click)="checkout()">Finalizar pedido</button>
 </ion-content>
