--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -19,7 +19,7 @@
         <img [src]="item.imageUrl || 'assets/imgs/prod.jpg'">
       </ion-thumbnail>
       <h2>{{item.nome}}</h2>
-      <p>{{item.preco}}</p>
+      <p>{{item.preco | currency}}</p>
     </button>
   </ion-list>
 
