--- a/src/pages/produto-detail/produto-detail.html
+++ b/src/pages/produto-detail/produto-detail.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>ProdutoDetail</ion-title>
+    <ion-title>Detalhes do Produto</ion-title>
   </ion-navbar>
   <ion-fab bottom right edge>
       <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
