--- a/src/pages/order-confirmation/order-confirmation.html
+++ b/src/pages/order-confirmation/order-confirmation.html
@@ -10,56 +10,71 @@
 
 <ion-content padding>
 
-  <ion-card>
-    <ion-card-header>Itens do pedido</ion-card-header>
-    <ion-list>
-      <ion-item *ngFor="let item of cartItems">
-        <ion-thumbnail item-start>
-          <img [src]="item.produto.imageUrl || 'assets/imgs/prod.jpg'">
-        </ion-thumbnail>
-        <h2>{{item.produto.nome}}</h2>
-        <p>{{item.produto.preco | currency}}</p>
-        <p>{{item.quantidade}}</p>
-        <p item-end>{{item.produto.preco * item.quantidade | currency}}</p>
-      </ion-item>
+  <div *ngIf="!codPedido">
 
+    <ion-card>
+      <ion-card-header>Itens do pedido</ion-card-header>
+      <ion-list>
+        <ion-item *ngFor="let item of cartItems">
+          <ion-thumbnail item-start>
+            <img [src]="item.produto.imageUrl || 'assets/imgs/prod.jpg'">
+          </ion-thumbnail>
+          <h2>{{item.produto.nome}}</h2>
+          <p>{{item.produto.preco | currency}}</p>
+          <p>{{item.quantidade}}</p>
+          <p item-end>{{item.produto.preco * item.quantidade | currency}}</p>
+        </ion-item>
+
+        <ion-item>
+          <h2>Total</h2>
+          <h2 item-end>{{total() | currency}}</h2>
+        </ion-item>
+
+      </ion-list>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>Cliente</ion-card-header>
       <ion-item>
-        <h2>Total</h2>
-        <h2 item-end>{{total() | currency}}</h2>
+        <h2>{{cliente?.nome}}</h2>
+        <p>{{cliente?.email}}</p>
       </ion-item>
+    </ion-card>
 
-    </ion-list>
-  </ion-card>
-
-  <ion-card>
-    <ion-card-header>Cliente</ion-card-header>
-    <ion-item>
-      <h2>{{cliente?.nome}}</h2>
-      <p>{{cliente?.email}}</p>
-    </ion-item>
-  </ion-card>
-
-  <ion-card>
-    <ion-card-header>Endereço de entrega</ion-card-header>
-    <ion-item>
-      <h2>{{endereco?.logradouro}}, {{endereco?.numero}}</h2>
-      <p>{{endereco?.complemento}} {{endereco?.bairro}} CEP {{endereco?.cep}}</p>
-      <p>{{endereco?.cidade.nome}}, {{endereco?.cidade.estado.nome}}</p>
-    </ion-item>
-  </ion-card>
-
-  <ion-card>
-    <ion-card-header>Pagamento</ion-card-header>
-    <ion-item *ngIf="pedido.pagamento['@type']=='pagamentoComCartao'">
-      <h3>Cartão de Crédito</h3>
-      <p>Quantidade de parcelas: {{pedido.pagamento.numeroDeParcelas}}</p>
-    </ion-item>
-    <ion-item *ngIf="pedido.pagamento['@type']=='pagamentoComBoleto'">
-        <h3>Boleto bancário</h3>        
+    <ion-card>
+      <ion-card-header>Endereço de entrega</ion-card-header>
+      <ion-item>
+        <h2>{{endereco?.logradouro}}, {{endereco?.numero}}</h2>
+        <p>{{endereco?.complemento}} {{endereco?.bairro}} CEP {{endereco?.cep}}</p>
+        <p>{{endereco?.cidade.nome}}, {{endereco?.cidade.estado.nome}}</p>
       </ion-item>
-  </ion-card>
+    </ion-card>
 
-  <button ion-button block (click)="checkout()">Confirmar pedido</button>
-  <button ion-button block outline (click)="back()">Voltar</button>
+    <ion-card>
+      <ion-card-header>Pagamento</ion-card-header>
+      <ion-item *ngIf="pedido.pagamento['@type']=='pagamentoComCartao'">
+        <h3>Cartão de Crédito</h3>
+        <p>Quantidade de parcelas: {{pedido.pagamento.numeroDeParcelas}}</p>
+      </ion-item>
+      <ion-item *ngIf="pedido.pagamento['@type']=='pagamentoComBoleto'">
+          <h3>Boleto bancário</h3>        
+        </ion-item>
+    </ion-card>
+
+    <button ion-button block (click)="checkout()">Confirmar pedido</button>
+    <button ion-button block outline (click)="back()">Voltar</button>
+
+  </div>
+  <div *ngIf="codPedido">
+    <ion-card>
+      <ion-card-header>Pedido registrado com sucesso!</ion-card-header>
+      <ion-item>
+        <h2>Código do pedido: {{codPedido}}</h2>
+        <p>Verifique seu e-mail</p>
+      </ion-item>
+    </ion-card>
+
+    <button ion-button block outline (click)="home()">Voltar</button>
+  </div>
 
 </ion-content>
