--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -12,6 +12,10 @@
 
 
 <ion-content padding>
+
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
     
   <ion-list>
     <button ion-item *ngFor="let item of items" (click)="showDetail(item.id)" >
